--- a/Inventory_control/MainWindow.xaml
+++ b/Inventory_control/MainWindow.xaml
@@ -6,9 +6,9 @@
         <TextBlock HorizontalAlignment="Left" Margin="108,141,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="108,173,0,0" TextWrapping="Wrap" Text="Password" VerticalAlignment="Top"/>
         <TextBox x:Name="username_box" HorizontalAlignment="Left" Height="23" Margin="207,140,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="password_box" HorizontalAlignment="Left" Height="23" Margin="207,172,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBlock HorizontalAlignment="Left" Margin="169,91,0,0" TextWrapping="Wrap" Text="Inventory Control system" VerticalAlignment="Top"/>
         <Button x:Name="Login_button" Content="Login" HorizontalAlignment="Left" Margin="207,227,0,0" VerticalAlignment="Top" Width="76" Click="Login_button_Click"/>
+        <PasswordBox x:Name="password_box" PasswordChar="*" HorizontalAlignment="Left" Margin="207,173,0,0" VerticalAlignment="Top" Width="120" Height="22"/>
 
     </Grid>
 </Window>
