--- a/Inventory_control/MainWindow.xaml
+++ b/Inventory_control/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Inventory_control.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="308" Width="468">
+        Title="MainWindow" Height="308" Width="468" WindowStartupLocation="CenterScreen">
     <Grid Background="#FFD8FFF6">
         <TextBlock HorizontalAlignment="Left" Margin="108,141,0,0" TextWrapping="Wrap" Text="Username" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="108,173,0,0" TextWrapping="Wrap" Text="Password" VerticalAlignment="Top"/>
